--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Boat</title>
+  <title>midterm</title>
   
   
   
@@ -14,22 +14,22 @@
 
 <body>
 
-  <head>
-  <head>
-    <title>Icon</title>
-  </head>
   <body>
-    <div class="icon">
-      <div class="sailboat">
-        <div class="sail1"></div>
-        <div class="sail2"></div>
-        <div class="boat"></div>
-      </div>
-      <div class="water wave1"></div>
-      <div class="water wave2"></div>
-      <div class="water wave3"></div>
+  <div class="smallman">
+    <div class="manout"></div>
+    <div class="bottom1">      
     </div>
-  </body>
+    <div class="cup">
+       <div class="circle"></div>
+      <div class="eye">
+        <div class="ball">
+          <div class="ball2"></div>
+        </div>
+      </div>
+      </div>
+    </div>
+      
+  </div>
 </body>
   
   
