--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 
   <body>
   <div class="smallman">
+    <div class="CUP">
     <div class="manout"></div>
     <div class="bottom1">      
-    </div>
+    </div>      
+    </div>      
+    
     <div class="cup">
        <div class="circle"></div>
       <div class="eye">
